--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.1",
-    "vuetify": "^3.0.0-beta.0",
+    "vuetify": "^3.3.2",
     "vuex": "^4.1.0",
     "webfontloader": "^1.0.0"
   },
