--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "node": "^16.10.0",
     "roboto-fontface": "*",
+    "swiper": "^9.4.0",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.1",
